[package]
name = "aztec_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aztec_wallet"
path = "src/lib.rs"

[[bin]]
name = "aztec_wallet"
path = "src/main.rs"

[dependencies]

anyhow = "1.0.86"
bdk = "0.29.0"
bdk_esplora = "0.17.0"
bdk_wallet = {version="1.0.0-beta.2", features = ["rusqlite"] }
bitcoin = "0.32.2"
esplora-client = "0.9.0"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }